--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "gulp-plumber": "^1.1.0",
     "vinyl-named": "^1.1.0",
     "lodash": "^4.13.1",
-    "gulplog": "^1.0.0"
+    "gulplog": "^1.0.0",
+    "node-sass": "^3.8.0",
+    "sass-loader": "^4.0.0"
   }
 }
