--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-webpack-task",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -42,6 +42,7 @@
     "lodash": "^4.13.1",
     "gulplog": "^1.0.0",
     "node-sass": "^3.8.0",
-    "sass-loader": "^4.0.0"
+    "sass-loader": "^4.0.0",
+    "postcss-loader": "^0.9.1"
   }
 }
