--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-webpack-task",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,7 @@
     "webpack-manifest-plugin": "^1.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "assets-webpack-plugin": "^3.4.0",
+    "copy-webpack-plugin": "^4.0.1",
     "webpack-stream": "^3.2.0",
     "css-loader": "^0.23.1",
     "exports-loader": "^0.6.3",
