--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-webpack-task",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -23,7 +23,7 @@
     "babel-preset-es2015": "~6.6.0",
     "less": "^2.7.1",
     "webpack": "^1.13.1",
-    "webpack-manifest-plugin": "^1.0.1",
+    "webpack-manifest-plugin": "1.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "assets-webpack-plugin": "^3.4.0",
     "copy-webpack-plugin": "^4.0.1",
