--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "less-loader": "^2.2.3",
     "script-loader": "^0.7.0",
     "style-loader": "^0.13.1",
-    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp": "^4.0.2",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "vinyl-named": "^1.1.0",
